--- a/css/detalles.css
+++ b/css/detalles.css
@@ -6,11 +6,9 @@
 
 #comments{
 	width: 1000px;
-	height:250px;
+	height:1000px;
 	float: left;
-	background-color: transparent;
-	border-style: solid;
-	border-width:1px;
+	background-color: white;
 }
 
 #TituloPost{
